<resources>
    <string name="app_name">Precisely</string>
    <string name="facebook_app_id">154504251970063</string>
    <string name="fb_login_protocol_scheme">fb154504251970063</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">YOUR NAME HERE</string>
    <string name="opportunities">OPPORTUNITIES</string>
    <string name="opportunity_number">123</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="recently_visited_opportunities">Recently Visited Opportunities</string>

</resources>
